force-app/main/default/objects/History_Order_Product__c/History_Order_Product__c.object-meta.xml
<CustomObject>
    <label>History Order Product</label>
    <nameField>
        <label>History Order Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Order Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>