force-app/main/default/objects/History_Order_Product__c/fields/Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price__c</fullName>
    <label>Actual Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>