force-app/main/default/objects/History_Order_Product__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>History Order Products</relationshipLabel>
    <relationshipName>History_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>